# graphics-course

./: CMakeLists.txt  README.md
src/App/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  TriangleWindow.cpp  main.cpp  mondelbrot.cpp  mondelbrot.h  shaders.qrc
src/App/Shaders/: mandelbrot.fs  mandelbrot.vs  mondelbrot.fs  mondelbrot.vs
